--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -1,5 +1,5 @@
 footer {
-    padding-top: 10px;
+    padding-top: 27px;
     padding-bottom: 20px;
     .container {
         display: flex;
@@ -12,6 +12,9 @@ footer {
             img {
                 width: 150px;
                 height: 63px;
+                @media #{$tablet} {
+                    margin: 0 auto;
+                }
                 @media #{$mobile} {
                    margin: 0 auto;
                 }
@@ -28,10 +31,13 @@ footer {
         }
         .footer-links {
             padding-left: 40px;
+            @media #{$tablet} {
+                padding-left: 0;
+            }
             @media #{$mobile} {
                 padding-left: 0;
             }
-            .nav {
+            .f-nav {
                 padding: 20px 0;
                 display: flex;
                 @media #{$tablet} {
@@ -42,16 +48,15 @@ footer {
                 }
 
                 &__item {
-                    padding-right: 10px;
+                    padding-right: 4px;
                     padding-left: 7px;
-                    border-right: 1px solid $yellow;
                     &:first-child {
                         padding-left: 0;
                     }
                     &__link {
                         display: block;
                         color: $black;
-                        font-size: 17px;
+                        font-size: 14px;
                         font-weight: 400;
                         line-height: 20px;
                         text-transform: uppercase;
@@ -65,18 +70,18 @@ footer {
                 }
             }
             .f-contacts {
-                padding-top: 5px;
                 position: relative;
                 color: $black;
                 display: flex;
-                flex-direction: column;
+                justify-content: space-between;
                 @media #{$mobile} {
                     padding-bottom: 5px;
                 }
                 &__number {
+                    padding-left: 20px;
                     display: block;
                     position: relative;
-                    font-size: 26px;
+                    font-size: 22px;
                     font-weight: 400;
                     font-family: 'Roboto Condensed', sans-serif;
                     text-align: right;
