--- a/src/sass/components/gallery.scss
+++ b/src/sass/components/gallery.scss
@@ -1,12 +1,31 @@
 .gallery {
+    position: relative;
     padding-top: 40px;
-    padding-bottom: 18px;
     box-shadow: inset 0 0 0 #ffffff;
-    background-color: #898989;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
     .container {
         h2 {
-            padding-bottom: 30px;
+            padding-bottom: 12px;
+        }
+    }
+    .gal {
+        position: relative;
+        .blocks {
+            display: flex;
+            width: 100%;
+            height: 100%;
+            justify-content: space-between;
+            position: absolute;
+            top: 0px;
+            .block {
+                background-color: $black;
+                opacity: 0.5;
+                width: 22%;
+                height: 93%;
+                z-index: 2;
+                @media #{$desktop} {
+                    height: 90%;
+                }
+            }
         }
     }
 }
