--- a/src/sass/components/main.scss
+++ b/src/sass/components/main.scss
@@ -1,13 +1,17 @@
 .services {
     box-shadow: inset 0 0 0 #ffffff;
-    background-color: #898989;
-    background-image: linear-gradient(to right, rgba(0, 0, 0, 0.22) 0%, rgba(255, 255, 255, 0.22) 50%, rgba(0, 0, 0, 0.22) 100%);
     background-image: url("../img/layer-28-copy.png");
     background-position: 40% 32%;
     background-repeat: no-repeat;
+    .container {
+        padding: 0;
+    }
 }
 .service {
     display: flex;
+    @media #{$tablet} {
+        padding-top: 50px;
+    }
     @media #{$mobile} {
         flex-direction: column;
         padding-top: 2px;
@@ -30,7 +34,7 @@
 .serv {
     &__title {
         position: absolute;
-        top: -2px;
+        top: -5px;
         width: 100%;
         padding: 17px;
         font-size: 24px;
@@ -41,7 +45,7 @@
     }
     &__subtitle {
         position: absolute;
-        bottom: 30px;
+        bottom: 34px;
         width: 100%;
         padding: 5px 15px;
         font-size: 16px;
@@ -50,10 +54,13 @@
         color: $white;
         background-color: $dark-green;
         opacity: 0.9;
+        @media #{$tablet} {
+            bottom: 80px;
+        }
     }
     .b-first {
         @media #{$tablet} {
-            bottom: 10px;
+            bottom: 60px;
         }
 
     }
