--- a/src/sass/components/navigation.scss
+++ b/src/sass/components/navigation.scss
@@ -2,10 +2,11 @@
     background-color: $black;
     border-top: 1px solid $yellow;
     border-bottom: 1px solid $yellow;
-    padding-bottom: 10px;
+    padding-bottom: 6px;
 }
 .nav {
-    padding: 20px 0;
+    padding-top: 26px;
+    padding-bottom: 20px;
     display: flex;
     @media #{$tablet} {
         flex-wrap: wrap;
@@ -18,6 +19,9 @@
         padding-right: 10px;
         padding-left: 7px;
         border-right: 1px solid $yellow;
+        @media #{$phone} {
+            margin-bottom: 10px;
+        }
         &:first-child {
             padding-left: 0;
         }
