--- a/src/sass/components/slider.scss
+++ b/src/sass/components/slider.scss
@@ -6,7 +6,7 @@
 }
 
 .slick-prev {
-    left: 200px;
+    left: 300px;
     @media #{$desktop} {
         left: 100px;
     }
@@ -28,7 +28,7 @@
     }
 }
 .slick-next {
-    right: 200px;
+    right: 300px;
     @media #{$desktop} {
         right: 100px;
     }
@@ -53,6 +53,26 @@
     div {
         img {
             width: 100%;
+        }
+    }
+    .slide {
+        position: relative;
+        &__mask {
+            position: absolute;
+            width: 100%;
+            height: 100%;
+            background-color: $yellow;
+            display: none;
+            opacity: 0.7;
+            font-size: 17px;
+            font-family: 'Roboto Bold Condensed';
+            text-align: center;
+        }
+        &:hover {
+            .slide__mask {
+                display: block;
+            }
+            background-color: $yellow;
         }
     }
 }
