--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -96,6 +96,7 @@
               <a class="item__link" href="#">Подробно</a>
             </div>
           </div>
+          <button class="product__btn">Смотреть все</button>
         </div>
         <div class="products__item product">
           <span class="product__title">Панели</span>
@@ -126,6 +127,7 @@
               <a class="item__link" href="#">Подробно</a>
             </div>
           </div>
+          <button class="product__btn">Смотреть все</button>
         </div>
       </div>
     </div>
@@ -136,12 +138,12 @@
       <p class="about__description">«Альта-Профиль» – первый отечественный производитель качественного сайдинга. Свою деятельность мы начали еще в 1999 году, и с тех пор из небольшого завода компания превратилась в полнофункциональное производство с широкой дилерской сетью по всей России.</p>
       <p class="about__description">Руководствуясь передовыми методами и лучшими технологиями зарубежных коллег, на основе собственной лабораторной базы мы создали уникальный товар, который оптимально подходит для использования в российских климатических условиях.</p>
       <div class="about__benefits benefits">
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/dds.png" alt="10 лет опыта"/></span><span class="benefits__item__descr">10 лет опыта</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/sdsd.png" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span class="benefits__item__descr">Гарантия 3 года на работы,10 лет на материалы</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/ss.png" alt="Работа по договору"/></span><span class="benefits__item__descr">Работа по договору</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/adsds.png" alt="Точность расчетов без доп. счетов"/></span><span class="benefits__item__descr">Точность расчетов без доп. счетов</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/dasd.png" alt="Бесплатная доставка"/></span><span class="benefits__item__descr">Бесплатная доставка</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/ds.png" alt="Монтаж круглый год"/></span><span class="benefits__item__descr">Монтаж круглый год</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/people.svg" alt="10 лет опыта"/></span><span class="benefits__item__descr">10 лет опыта</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/award.svg" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span class="benefits__item__descr">Гарантия 3 года на работы,10 лет на материалы</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/list.svg" alt="Работа по договору"/></span><span class="benefits__item__descr">Работа по договору</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/calc.svg" alt="Точность расчетов без доп. счетов"/></span><span class="benefits__item__descr">Точность расчетов без доп. счетов</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/car.svg" alt="Бесплатная доставка"/></span><span class="benefits__item__descr">Бесплатная доставка</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/snow.svg" alt="Монтаж круглый год"/></span><span class="benefits__item__descr">Монтаж круглый год</span></div>
       </div>
     </div>
   </section>
