--- a/src/sass/components/reviews.scss
+++ b/src/sass/components/reviews.scss
@@ -38,6 +38,7 @@
 .rev {
     position: relative;
     width: 48.2%;
+    border-right: 1px solid $greener;
     @media #{$tablet} {
         width: 100%;
     }
@@ -68,7 +69,9 @@
 
 .reviews {
     display: flex;
-    flex-direction: column;
+    @media #{$tablet} {
+        flex-direction: column;
+    }
     .review {
         padding-top: 17px;
         display: flex;
@@ -105,7 +108,6 @@
 
 .call-us {
     width: 50%;
-    border-left: 1px solid $greener;
     padding-left: 5px;
     @media #{$tablet} {
         width: 70%;
