--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -11,10 +11,10 @@
 @import variables
 @import components/header
 @import components/navigation
-@import components/main
-@import components/yellow
-@import components/company
-@import components/reviews
+@import components/services
+@import components/product
+@import components/about
+@import components/feedback
 @import components/news
 @import components/gallery
 @import components/footer
