--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -24,6 +24,10 @@
         padding-top: 30px;
         display: flex;
         justify-content: space-between;
+        @media #{$tablet} {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         @media #{$mobile} {
             flex-wrap: wrap;
         }
@@ -33,6 +37,9 @@
             display: flex;
             flex-direction: column;
             text-align: center;
+            @media #{$tablet} {
+                margin-bottom: 10px;
+            }
             @media #{$mobile} {
                 width: 50%;
             }
