--- a/src/sass/components/footer.scss
+++ b/src/sass/components/footer.scss
@@ -24,6 +24,9 @@ footer {
                 font-size: 13px;
                 font-weight: 400;
                 text-transform: uppercase;
+                @media #{$tablet} {
+                    text-align: center;
+                }
                 @media #{$mobile} {
                     text-align: center;
                 }
@@ -88,7 +91,7 @@ footer {
                     color: $black;
                     @media #{$mobile} {
                         text-align: left;
-                        padding-left: 25px;
+                        padding-left: 0;
                         font-size: 18px;
                     }
                     &--bold {
