--- a/src/sass/components/product.scss
+++ b/src/sass/components/product.scss
@@ -15,11 +15,23 @@
     }
 }
 .product {
-    margin-right: 32px;
+    margin-right: 16px;
     width: 50%;
     margin-top: 25px;
+    @media #{$tablet} {
+        width: 100%;
+        margin-right: 0;
+    }
     @media #{$mobile} {
         width: 100%;
+    }
+    &:first-child {
+        padding-right: 12px;
+        border-right: 1px solid $dark-green;
+        @media #{$tablet} {
+            border: none;
+            padding-right: 0;
+        }
     }
     &__item {
         padding-bottom: 50px;
@@ -61,7 +73,7 @@
         display: flex;
         @media #{$mobile} {
             flex-wrap: wrap;
-            padding-left: 30px;
+            justify-content: center;
         }
         .item {
             position: relative;
@@ -70,6 +82,8 @@
             height: 74px;
             @media #{$mobile} {
                 margin-bottom: 5px;
+                width: 68px;
+                height: 68px;
             }
             &:hover {
                 .item__link {
@@ -108,6 +122,9 @@
         border-radius: 3px;
         &:hover {
             color: $yellow;
+        }
+        @media #{$tablet} {
+            margin-top: 10px;
         }
     }
 
