--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -13,7 +13,7 @@
 .service {
     display: flex;
     @media #{$tablet} {
-        padding-top: 50px;
+        flex-direction: column;
     }
     @media #{$mobile} {
         flex-direction: column;
@@ -27,6 +27,9 @@
         padding: 0;
         background-size: 100%;
         background-repeat: no-repeat;
+        @media #{$tablet} {
+            width: 100%;
+        }
         @media #{$mobile} {
             width: 100%;
             -webkit-background-size: 102%;
@@ -59,6 +62,7 @@
         opacity: 0.9;
         @media #{$tablet} {
             bottom: 80px;
+            font-size: 20px;
         }
     }
     .b-first {
