--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -51,6 +51,9 @@
                 border-radius: 50%;
                 background-color: $yellow;
                 margin-bottom: 9px;
+                .icon {
+                    margin-top: 26px;
+                }
                 img {
                     text-align: center;
                     margin-top: 20px;
