--- a/src/templates/page.html
+++ b/src/templates/page.html
@@ -1,3 +1,5 @@
+{% import "partials/_mixins.html" as mixins %}
+
 <!doctype html>
 <html>
 <head>
@@ -138,12 +140,12 @@
       <p class="about__description">«Альта-Профиль» – первый отечественный производитель качественного сайдинга. Свою деятельность мы начали еще в 1999 году, и с тех пор из небольшого завода компания превратилась в полнофункциональное производство с широкой дилерской сетью по всей России.</p>
       <p class="about__description">Руководствуясь передовыми методами и лучшими технологиями зарубежных коллег, на основе собственной лабораторной базы мы создали уникальный товар, который оптимально подходит для использования в российских климатических условиях.</p>
       <div class="about__benefits benefits">
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/people.svg" alt="10 лет опыта"/></span><span class="benefits__item__descr">10 лет опыта</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/award.svg" alt="Гарантия 3 года на работы,10 лет на материалы"/></span><span class="benefits__item__descr">Гарантия 3 года на работы,10 лет на материалы</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/list.svg" alt="Работа по договору"/></span><span class="benefits__item__descr">Работа по договору</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/calc.svg" alt="Точность расчетов без доп. счетов"/></span><span class="benefits__item__descr">Точность расчетов без доп. счетов</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/car.svg" alt="Бесплатная доставка"/></span><span class="benefits__item__descr">Бесплатная доставка</span></div>
-        <div class="benefits__item"><span class="benefits__item__icon"><img src="../img/svgo/snow.svg" alt="Монтаж круглый год"/></span><span class="benefits__item__descr">Монтаж круглый год</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('people')}}</span><span class="benefits__item__descr">10 лет опыта</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('award')}}</span><span class="benefits__item__descr">Гарантия 3 года на работы,10 лет на материалы</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('list')}}</span><span class="benefits__item__descr">Работа по договору</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('calc')}}</span><span class="benefits__item__descr">Точность расчетов без доп. счетов</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('car')}}</span><span class="benefits__item__descr">Бесплатная доставка</span></div>
+        <div class="benefits__item"><span class="benefits__item__icon">{{mixins.icon('snow')}}</span><span class="benefits__item__descr">Монтаж круглый год</span></div>
       </div>
     </div>
   </section>
@@ -217,17 +219,17 @@
         <div class="block"></div>
       </div>
       <div class="slider multiple-items" data-slick='{"slidesToShow": 9, "slidesToScroll": 1}' id="carousel">
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-21.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-22.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-23.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-24.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-25.png" alt="Модный дом"/></div>
-        <div class="slide" style="background-image: url('../img/layer-23.png'); background-size: cover;"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-23.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-24.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-25.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-23.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-24.png" alt="Модный дом"/></div>
-        <div class="slide"><span class="slide__mask">Сайдинг виниловый</span><img src="../img/layer-25.png" alt="Модный дом"/></div>
+        <div class="slide" style="background-image: url('../img/layer-21.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-22.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-23.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-24.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-25.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-24.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-25.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-25.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-23.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-24.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
+        <div class="slide" style="background-image: url('../img/layer-25.png');"><span class="slide__mask">Сайдинг виниловый</span></div>
       </div>
     </div>
   </section>
