--- a/src/sass/app.sass
+++ b/src/sass/app.sass
@@ -1,6 +1,6 @@
 // done by riverco.de
 @import lib/slick.scss
-@import slick/slick-theme.scss
+@import lib/slick-theme.scss
 
 @import helpers/all
 @import generated/sprite-svg
