--- a/src/sass/components/about.scss
+++ b/src/sass/components/about.scss
@@ -52,7 +52,9 @@
                 background-color: $yellow;
                 margin-bottom: 9px;
                 .icon {
-                    margin-top: 26px;
+                    width: 30px;
+                    height: 30px;
+                    margin-top: 20px;
                 }
                 img {
                     text-align: center;
