--- a/src/sass/components/services.scss
+++ b/src/sass/components/services.scss
@@ -13,7 +13,7 @@
 .service {
     display: flex;
     @media #{$tablet} {
-        flex-direction: column;
+
     }
     @media #{$mobile} {
         flex-direction: column;
@@ -25,7 +25,6 @@
         min-height: 337px;
         border: none;
         padding: 0;
-        background-size: 100%;
         background-repeat: no-repeat;
         @media #{$tablet} {
             width: 100%;
@@ -38,9 +37,10 @@
     }
 }
 .serv {
+    background-size:cover;
     &__title {
         position: absolute;
-        top: -5px;
+        top: -1px;
         width: 100%;
         padding: 17px;
         font-size: 24px;
@@ -48,6 +48,14 @@
         color: $white;
         background-color: $dark-green;
         opacity: 0.9;
+        @media #{$tablet} {
+            padding-top: 5px;
+            padding-left: 5px;
+            font-size: 15px;
+        }
+        @media #{$phone} {
+            font-size: 24px;
+        }
     }
     &__subtitle {
         position: absolute;
@@ -62,7 +70,7 @@
         opacity: 0.9;
         @media #{$tablet} {
             bottom: 80px;
-            font-size: 20px;
+            font-size: 16px;
         }
     }
     .b-first {
@@ -74,65 +82,3 @@
 }
 
 
-//div {
-//    width: 100%;
-//    display: flex;
-//    @media #{$mobile} {
-//        flex-direction: column;
-//        padding-top: 2px;
-//    }
-//    .first {
-//        background-image: url("../img/layer-1.png");
-//    }
-//    .second {
-//        background-image: url("../img/layer-2.png");
-//    }
-//    .third {
-//        background-image: url("../img/layer-3.png");
-//    }
-//    .fourth {
-//        background-image: url("../img/layer-4.png");
-//    }
-//    div {
-//        position: relative;
-//        width: 25%;
-//        min-height: 337px;
-//        border: none;
-//        padding: 0;
-//        @media #{$mobile} {
-//            width: 100%;
-//            -webkit-background-size: 102%;
-//            background-size: 102%;
-//        }
-//        .top {
-//            position: absolute;
-//            top: -2px;
-//            width: 100%;
-//            padding: 17px;
-//            font-size: 24px;
-//            text-transform: uppercase;
-//            color: $white;
-//            background-color: $dark-green;
-//            opacity: 0.9;
-//        }
-//        .bottom {
-//            position: absolute;
-//            bottom: 30px;
-//            width: 100%;
-//            padding: 5px 15px;
-//            font-size: 16px;
-//            font-weight: 400;
-//            font-family: 'Roboto Condensed', sans-serif;
-//            color: $white;
-//            background-color: $dark-green;
-//            opacity: 0.9;
-//        }
-//        .b-first {
-//            @media #{$tablet} {
-//                bottom: 10px;
-//            }
-//
-//        }
-//
-//    }
-//}
