--- a/src/sass/components/product.scss
+++ b/src/sass/components/product.scss
@@ -21,6 +21,7 @@
     @media #{$tablet} {
         width: 100%;
         margin-right: 0;
+        text-align: center;
     }
     @media #{$mobile} {
         width: 100%;
@@ -71,6 +72,11 @@
     &__photos {
         padding-top: 27px;
         display: flex;
+        justify-content: center;
+        @media #{$phone} {
+            flex-wrap: wrap;
+            justify-content: center;
+        }
         @media #{$mobile} {
             flex-wrap: wrap;
             justify-content: center;
@@ -92,13 +98,21 @@
             }
             &__link {
                 position: absolute;
-                top: 40%;
-                left: 3%;
+                top: 0;
+                display: none;
+                width: 100%;
+                height: 100%;
+                background-color: $white;
+                opacity: 0.7;
                 color: $black;
+                text-align: center;
+                padding-top: 30px;
+                border-radius: 3px;
                 font-size: 14px;
+                font-family: 'Roboto Bold Condensed', sans-serif;
                 text-decoration: underline;
                 text-transform: uppercase;
-                display: none;
+
                 @media #{$tablet} {
                     left: 6%;
                     font-size: 12px;
@@ -113,7 +127,7 @@
         }
     }
     &__btn {
-        font-family: 'Arial MT';
+        font-family: 'Arial MT', sans-serif;
         font-size: 13px;
         color: $white;
         line-height: 30px;
@@ -125,6 +139,11 @@
         }
         @media #{$tablet} {
             margin-top: 10px;
+            width: 50%;
+        }
+        @media #{$phone} {
+            margin-top: 10px;
+            width: 100%;
         }
     }
 
